--- a/.github/workflows/update-production.yaml
+++ b/.github/workflows/update-production.yaml
@@ -5,7 +5,7 @@ on:
 permissions: {}
 
 jobs:
-  reset-prod:
+  update-prod:
     runs-on: ubuntu-latest
     steps:
       - name: Update Production repos
