--- a/.github/workflows/update-test.yaml
+++ b/.github/workflows/update-test.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Update Test repos
-        uses: radxa-repo/update-repo-action@main
+        uses: RadxaOS-SDK/rsdk/.github/actions/infra-repo-update@main
         with:
           test-repo: true
           token: ${{ secrets.RADXA_APT_TEST_REPO_TOKEN }}
